<resources>
    <string name="app_name">dwicara</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot your password?</string>
    <string name="sign_up">Sign Up</string>
    <string name="enter_your_email_hint">Enter your email</string>
    <string name="enter_your_password_hint">Enter your password</string>
    <string name="back">Back</string>
    <string name="register_account">Register Account</string>
    <string name="confirm_your_password">Confirm your password</string>
    <string name="register">Register</string>
    <string name="invalid_email_error">Wrong email format.</string>
    <string name="invalid_password_format">Password must be at least 6 character long.</string>
    <string name="field_empty_error">Please fill out the %s field!</string>
    <string name="password_doesnt_match">The confirmation password doesn\'t match.</string>
    <string name="reset_password">Reset Password</string>
    <string name="send_reset_link">Send Reset Link</string>
    <string name="profile">Profile</string>
    <string name="enter_your_full_name">What\'s your full name?</string>
    <string name="enter_your_birthday">When\'s your birthday?</string>
    <string name="enter_your_gender">What\'s your gender?</string>
    <string name="next">Next</string>
    <string name="enter_your_username">Enter your username</string>
    <string name="logout">Logout</string>
    <string name="tell_us_your_interest">Tell Us Your Interest!</string>
    <string name="save">save</string>
    <string name="find_your_friend_by_id_here">Find your friend by ID here</string>
    <string name="same_interest_with_you">Same Interest With You</string>
    <string name="find_others_here">Find others here</string>
    <string name="today_s_word">Today\'s Word</string>
    <string name="new_insight">New Insight!</string>
    <string name="click_to_read_more">Click to read more</string>
    <string name="title_home">Home</string>
    <string name="title_chats">Chats</string>
    <string name="no_result_yet">No result yet</string>
    <string name="view_profile">view profile</string>
    <string name="chats">chats</string>
    <string name="txt_native">NATIVE</string>
    <string name="txt_learn">LEARN</string>
    <string name="filter">Filter</string>
    <string name="topic_im_interested">Topic I\'m Interested</string>
    <string name="about">About</string>
    <string name="languages">Languages</string>
    <string name="apply">Apply</string>
    <string name="my_chats">My chats</string>
</resources>