<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".auth.signup.SignupFragment">

    <Button
        android:id="@+id/btn_back"
        style="@style/OutlinedButton.Inline"
        android:layout_marginStart="@dimen/space_normal"
        android:layout_marginTop="@dimen/space_small"
        android:drawableLeft="@drawable/ic_baseline_arrow_back_24"
        android:text="@string/back"
        app:drawableTint="@color/blue_500"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_register"
        style="@style/TextContent.Header"
        android:layout_marginHorizontal="@dimen/space_normal"
        android:text="@string/register_account"
        app:layout_constraintBottom_toTopOf="@+id/et_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_bias="0.25"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <EditText
        android:id="@+id/et_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/space_normal"
        android:layout_marginTop="@dimen/space_normal"
        android:backgroundTint="@color/grey_500"
        android:hint="@string/enter_your_email_hint"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/et_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_register" />

    <EditText
        android:id="@+id/et_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/space_normal"
        android:layout_marginTop="@dimen/space_normal"
        android:backgroundTint="@color/grey_500"
        android:hint="@string/enter_your_password_hint"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/et_confirm"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_email" />

    <EditText
        android:id="@+id/et_confirm"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/space_normal"
        android:layout_marginTop="@dimen/space_normal"
        android:backgroundTint="@color/grey_500"
        android:hint="@string/confirm_your_password"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_password" />

    <Button
        android:id="@+id/button"
        style="@style/Button.Big"
        android:layout_marginHorizontal="@dimen/space_normal"
        android:layout_marginTop="@dimen/space_extra_large"
        android:text="@string/register"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_confirm" />

</androidx.constraintlayout.widget.ConstraintLayout>