<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".form.PersonalFragment">

    <ImageButton
        android:id="@+id/avatar"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:background="@drawable/ic_account_circle_24px"
        android:layout_marginTop="@dimen/space_extra_large"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />
    
    <ImageButton
        android:id="@+id/edit"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:background="@drawable/ic_edit_24px"
        app:layout_constraintRight_toRightOf="@id/avatar"
        app:layout_constraintBottom_toBottomOf="@id/avatar" />


    <TextView
        android:id="@+id/tv_profile"
        style="@style/TextContent.Header"
        android:layout_marginTop="@dimen/space_large"
        android:layout_marginHorizontal="@dimen/space_normal"
        android:text="@string/profile"
        app:layout_constraintTop_toBottomOf="@id/avatar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <EditText
        android:id="@+id/et_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/space_normal"
        android:layout_marginTop="@dimen/space_normal"
        android:backgroundTint="@color/grey_500"
        android:hint="@string/enter_your_name"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@id/tv_profile"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/et_birthday"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/space_normal"
        android:layout_marginTop="@dimen/space_normal"
        android:backgroundTint="@color/grey_500"
        android:hint="@string/enter_your_birthday"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@id/et_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <ImageButton
        android:id="@+id/calendar"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:background="@drawable/ic_baseline_calendar_month_24"
        app:layout_constraintTop_toTopOf="@id/et_birthday"
        app:layout_constraintBottom_toBottomOf="@id/et_birthday"
        app:layout_constraintRight_toRightOf="@id/et_birthday"/>

    <EditText
        android:id="@+id/et_gender"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/space_normal"
        android:layout_marginTop="@dimen/space_normal"
        android:backgroundTint="@color/grey_500"
        android:hint="@string/enter_your_gender"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@id/et_birthday"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <ImageButton
        android:id="@+id/dropdown"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:background="@drawable/ic_baseline_arrow_drop_down_24"
        app:layout_constraintTop_toTopOf="@id/et_gender"
        app:layout_constraintBottom_toBottomOf="@id/et_gender"
        app:layout_constraintRight_toRightOf="@id/et_gender"/>

    <Button
        android:id="@+id/btn_next"
        style="@style/Button.Big"
        android:layout_marginHorizontal="@dimen/space_normal"
        android:layout_marginTop="@dimen/space_large"
        android:text="@string/next"
        app:layout_constraintTop_toBottomOf="@+id/et_gender"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>