<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".form.LanguageFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btn_back"
            style="@style/OutlinedButton.Inline"
            android:layout_marginStart="@dimen/space_normal"
            android:layout_marginTop="@dimen/space_small"
            android:drawableLeft="@drawable/ic_baseline_arrow_back_24"
            android:text="@string/back"
            app:drawableTint="@color/blue_500"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_interest"
            style="@style/TextContent.Header"
            android:layout_marginTop="@dimen/space_large"
            android:layout_marginHorizontal="@dimen/space_normal"
            android:text="@string/tell_us_your_interest"
            app:layout_constraintTop_toBottomOf="@id/btn_back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <ImageView
            android:id="@+id/iv_native"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/space_normal"
            android:layout_marginTop="@dimen/space_large"
            android:src="@drawable/ic_unknown_flag"
            app:layout_constraintTop_toBottomOf="@id/tv_interest"
            app:layout_constraintStart_toStartOf="parent"/>

        <Spinner
            android:id="@+id/et_native"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/space_normal"
            app:layout_constraintTop_toTopOf="@id/iv_native"
            app:layout_constraintBottom_toBottomOf="@id/iv_native"
            app:layout_constraintStart_toEndOf="@id/iv_native"
            app:layout_constraintEnd_toEndOf="parent"/>

        <ImageView
            android:id="@+id/iv_learn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/space_normal"
            android:layout_marginTop="@dimen/space_large"
            android:src="@drawable/ic_unknown_flag"
            app:layout_constraintTop_toBottomOf="@id/iv_native"
            app:layout_constraintStart_toStartOf="parent"/>

        <Spinner
            android:id="@+id/et_learn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/space_normal"
            app:layout_constraintTop_toTopOf="@id/iv_learn"
            app:layout_constraintBottom_toBottomOf="@id/iv_learn"
            app:layout_constraintStart_toEndOf="@id/iv_learn"
            app:layout_constraintEnd_toEndOf="parent"/>

        <Button
            android:id="@+id/btn_save"
            style="@style/Button.Big"
            android:layout_marginHorizontal="@dimen/space_normal"
            android:layout_marginTop="@dimen/space_extra_large"
            android:text="@string/save"
            app:cornerRadius="@dimen/space_normal"
            app:layout_constraintTop_toBottomOf="@+id/et_learn"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>